editor bought into screen

--- a/src/Component/Login/style.css
+++ b/src/Component/Login/style.css
@@ -1,9 +1,9 @@
-body{
+/* body{
     margin: 0;
     padding: 10px;
     background: rgba(97, 197, 236, 0.5);
     font-family: sans-serif;
-}
+} */
 
 .logInBox{
     position: absolute;
